<resources>
    <string name="app_name">השכרת דירות BGU</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="minimal_cost">מחיר התחלתי</string>
    <string name="maximal_cost">מחיר מקסימלי</string>
    <string name="cost_to_from">-</string>
    <string name="sheqel">\u20AA</string>
    <string name="title_activity_maps">Map</string>
    <string name="reminder">reminder</string>
    <string name="done">done</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">שליחה</string>
    <string name="map_mode">תצוגת מפה</string>
    <string name="record_mode">תצוגת רשומות</string>
    <string name="RecentlyResults">תוצאות קודמות</string>
    <string name="NextResults">תוצאות הבאות</string>
    <string name="search">חיפוש</string>
    <string name="hyphen">\u2010</string>
    <string name="maximal_floor">קומה מקסימלית</string>
    <string name="minimal_floor">קומה התחלתית</string>
    <string name="addCategory">הוספת קטגוריה</string>
    <string name="RemoveCategory">הסרת קטגוריה</string>
    <string name="neighborhood">שכונה</string>
    <string name="minimal_size">גודל מינימלי</string>
    <string name="maximal_size">גודל מקסימלי</string>
    <string name="distanceFromUniversity">מרחק הליכה מהאוניברסיטה</string>
    <string name="numberOfRooms">מספר חדרים</string>
    <string name="numberOfRoomates">מספר שותפים</string>
    <string name="furniture">ריהוט</string>
    <string name="gardenCheck">גינה/חצר</string>
    <string name="balconyCheck">מרפסת</string>
    <string name="protectedSpaceCheck">מרחב מוגן</string>
    <string name="animalsCheck">חיות</string>
    <string name="warehouseCheck">מחסן</string>
    <string name="costDTO">מחיר</string>
    <string name="floorDTO">קומה</string>
    <string name="sizeDTO">גודל דירה</string>
    <string name="cost">מחיר:</string>
    <string name="address">כתובת:</string>
    <string name="rooms">חדרים:</string>
    <string name="amountOfRoomates">כמות שותפים:</string>
    <string name="roomates">שותפים:</string>
    <string name="colon">:</string>
    <string name="call">תקשר\\י</string>
    <string name="contacts">אנשי קשר:</string>
    <string name="sourceText">טקסט מקור:</string>
    <string name="floor">קומה:</string>
    <string name="size">גודל דירה:</string>
    <string name="sqrMeters">מ\"ר</string>
    <string name="distanceFromUniversityAppartmentFullDescription">מרחק הליכה מהאוניברסיטה:</string>
    <string name="minutes">דקות</string>
    <string name="publishDate">תאריך פרסום:</string>
    <string name="additions">תוספות:</string>
    <string name="furnitureFullDescription">ריהוט:</string>
    <string name="gardenFullDescription">גינה:</string>
    <string name="protectedSpaceFullDescription">מרחב מוגן:</string>
    <string name="warehouseFullDescription">מחסן:</string>
    <string name="balconyFullDescription">מרפסת:</string>
    <string name="animalsFullDescription">חיות:</string>
    <string name="editPencil">\u270e</string>
    <string name="phoneImage">\u260E</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="have">יש</string>
    <string name="dontHave">אין</string>
    <string name="permittedAnimals">מותר חיות</string>
    <string name="forbiddenAnimals">אסור חיות</string>
    <string name="fullFurniture">ריהוט מלא</string>
    <string name="partialFurniture">ריהוט חלקי</string>
    <string name="dontHaveFurniture">אין ריהוט</string>
    <string name="enterFloor">הכנס/י קומה</string>
    <string name="streetColon">רחוב:</string>
    <string name="enterStreet">הכנס/י רחוב</string>
    <string name="numberColon">מספר:</string>
    <string name="enterNumber">הכנס/י מספר</string>
    <string name="enterNeighborhood">הכנס/י שכונה</string>
    <string name="neighborhoodColon">שכונה:</string>
    <string name="buildingColon">בניין:</string>
    <string name="enterCost">הכנס/י מחיר</string>
    <string name="enterSize">הכנס/י גודל דירה</string>
    <string name="sendFixTO">שליחת תיקון טעות ל</string>
    <string name="reportHelp">\u2022 אנא תקנ/י את השדה על פי טקסט המקור הנמצא מטה.</string>
    <string name="haveGarden">יש גינה</string>
    <string name="dontHaveGarden">אין גינה</string>
    <string name="haveProtectedSpace">יש מרחב מוגן</string>
    <string name="dontHaveProtectedSpace">אין מרחב מוגן</string>
    <string name="haveWarehouse">יש מחסן</string>
    <string name="dontHaveWarehouse">אין מחסן</string>
    <string name="haveBalcony">יש מרפסת</string>
    <string name="dontHaveBalcony">אין מרפסת</string>
    <string name="sweptRightSign">\u25b6</string>
    <string name="sweptLeftSign">\u25c0</string>
    <string name="alternativeResults">תוצאות אלטרנטיבות</string>
    <string name="searchApartments">חיפוש דירות</string>
    <string name="searchApartmentActivityExplanation">\u2022יש לבחור קטגוריות על פי סדר עדיפויות\u2022</string>
</resources>
