<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/cost"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/enterCost"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sheqel"
        android:textColor="#000000"
        android:textSize="15sp" />

</LinearLayout>
