<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/size"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/enterSize"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqrMeters"
        android:textColor="#000000"
        android:textSize="15sp" />

</LinearLayout>
