<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/streetColon"
            android:textColor="#000000"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/streetContent"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/enterStreet"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/buildingColon"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/buildingNumberContent"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/enterNumber"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/neighborhoodColon"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinnerNeighborhoodContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/array_neighborhoodNames">

        </Spinner>

    </LinearLayout>

</LinearLayout>
