<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/sweptRightSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:onClick="ToastSwipeRight"
        android:text="@string/sweptRightSign" />

    <LinearLayout
        android:id="@+id/briefDescriptionContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/address"
                android:textColor="#b20113" />

            <TextView
                android:id="@+id/mapBriefDescriptionAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/rooms"
                android:textColor="#b20113" />

            <TextView
                android:id="@+id/mapBriefDescriptionRooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:textColor="#000000" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/roomates"
                android:textColor="#b20113" />

            <TextView
                android:id="@+id/mapBriefDescriptionRoomates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/cost"
                android:textColor="#b20113" />

            <TextView
                android:id="@+id/mapBriefDescriptionCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/mapBriefDescriptionSheqel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sheqel"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/sweptLeftSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:onClick="ToastSwipeLeft"
        android:text="@string/sweptLeftSign" />

    <TextView
        android:id="@+id/paging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:textSize="12sp" />

</RelativeLayout>
