<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="#b20113"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp" />

        <TextView
            android:id="@+id/briefDescriptionAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rooms"
            android:textColor="#b20113"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp" />

        <TextView
            android:id="@+id/briefDescriptionRooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#000000"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roomates"
            android:textColor="#b20113"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp" />

        <TextView
            android:id="@+id/briefDescriptionRoomates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textColor="#b20113"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp" />

        <TextView
            android:id="@+id/briefDescriptionCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/briefDescriptionSheqel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sheqel"
            android:textColor="#000000"/>
    </LinearLayout>




</LinearLayout>