<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/apartmentFullDescription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/address"
                    android:textColor="#b20113"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/editAddressBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#ffffff"
                    android:src="@drawable/pencil" />

                <TextView
                    android:id="@+id/addressTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="15sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/floor"
                    android:textColor="#b20113"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/editFloorBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#ffffff"
                    android:src="@drawable/pencil" />

                <TextView
                    android:id="@+id/floorTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/cost"
                    android:textColor="#b20113"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/editCostBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#ffffff"
                    android:src="@drawable/pencil" />

                <TextView
                    android:id="@+id/costTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sheqel"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/size"
                android:textColor="#b20113"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/editSizeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="#ffffff"
                android:src="@drawable/pencil" />

            <TextView
                android:id="@+id/sizeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="15sp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="15sp"
                android:text="@string/sqrMeters"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/rooms"
                    android:textColor="#b20113"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/editRoomsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#ffffff"
                    android:src="@drawable/pencil" />

                <TextView
                    android:id="@+id/roomsTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/roomates"
                    android:textColor="#b20113"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/editRoomatesBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#ffffff"
                    android:src="@drawable/pencil" />

                <TextView
                    android:id="@+id/roomatesTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="15sp" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/category_background"
                android:text="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/contacts"
                android:textColor="#b20113"
                android:textSize="15sp" />


            <ListView
                android:id="@+id/listViewContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/category_background"
                android:text="" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sourceText"
                android:textColor="#b20113"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sourceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="15sp" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>
